fixed processing of messages that requires username extracted from token
