# src/main/java/home/assignment/messageboard/model/Message.java
@@ -6,15 +6,15 @@ import java.util.Objects;
 public class Message {
 
     private Integer id;
-    private Integer userId;
+    private String username;
     private String title;
     private String text;
     private OffsetDateTime createdAt;
     private OffsetDateTime updatedAt;
 
-    public Message(Integer id, Integer userId, String title, String text, OffsetDateTime createdAt, OffsetDateTime updatedAt) {
+    public Message(Integer id, String username, String title, String text, OffsetDateTime createdAt, OffsetDateTime updatedAt) {
         this.id = id;
-        this.userId = userId;
+        this.username = username;
         this.title = title;
         this.text = text;
         this.createdAt = createdAt;
@@ -33,8 +33,8 @@ public class Message {
         return text;
     }
 
-    public Integer getUserId() {
-        return userId;
+    public String getUsername() {
+        return username;
     }
 
     public OffsetDateTime getCreatedAt() {
@@ -65,7 +65,7 @@ public class Message {
     public String toString() {
         return "Message{" +
                 "id=" + id +
-                ", userId=" + userId +
+                ", username=" + username +
                 ", title='" + title + '\'' +
                 ", text='" + text + '\'' +
                 ", createdAt=" + createdAt +
